--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
+    <link rel="icon" href="logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#6366f1" />
     <meta
       name="description"
       content="SEONN - Sua IA simples e amigável"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="logo.svg" />
+    <link rel="manifest" href="manifest.json" />    
     <title>SEONN | IA Amigável</title>
   </head>
   <body>
